# air-quality

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
.streamlit/: config.toml
src/: requirements-test.in  requirements-test.txt  requirements.in  requirements.txt
src/air-quality/: golemio_test_api.py
src/air_quality/: config.py  dashboard.py  main.py
src/air_quality/ingestors/: base_client.py  golemio_client.py
src/air_quality/utils/: golemio_processor.py
src/air_quality/writers/: writer.py
terraform/: imports.tf  main.tf
tests/: test_config_and_writers.py  test_e2e_pipeline.py  test_golemio_processor.py
