[project]
name = "air-quality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.0.0",
    "httpx==0.27.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
    "boto3",
    "python-dotenv",
    "moto",
]

[project.scripts]
air-quality = "air-quality.main:main"
